# vp

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README.md  TODO  config.h.cmake.in  configure.ac  configure.in  iview.spec  siview.spec  vp.spec  vp.spec.in
.github/workflows/: ci.yml  release.yml
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
debian/: changelog  control  copyright  rules
doc/: CMakeLists.txt  Makefile.am  iview.1  vp.1
src/: CMakeLists.txt  Makefile.am  font8x8.h  ftp.c  ftp.h  http.c  http.h  image.c  image.h  input.c  input.h  iview.c  iview.h  ll.c  ll.h  net.c  net.h  siview.c  siview.h  timer.c  timer.h  vp.c  vp.h
tests/: net-tests.sh  testserv.py
